Add radio to audiobookshelf

--- a/services/audiobookshelf/docker-compose.yml
+++ b/services/audiobookshelf/docker-compose.yml
@@ -16,3 +16,4 @@ services:
       - ${CONFIG_DIR}/audiobookshelf/metadata:/metadata
       - ${AUDIOBOOKS_DIR}:/audiobooks:ro
       - ${PODCASTS_DIR}:/podcasts:ro
+      - ${RADIO_DIR}:/radio:ro
