--- a/services/slskd/docker-compose.yml
+++ b/services/slskd/docker-compose.yml
@@ -14,8 +14,8 @@ services:
       - ${CONFIG_DIR}/slskd:/app
       - ${DOWNLOADS_DIR}:/downloads
       - ${AUDIO_DIR}:/media/audio:ro
-      - ${AUDIOBOOKS_DIR}:/media/audiobooks:ro
-      - ${EBOOKS_DIR}:/media/ebooks:ro
+      - ${AUDIOBOOK_DIR}:/media/audiobooks:ro
+      - ${EBOOK_DIR}:/media/ebooks:ro
       - ${PODCASTS_DIR}:/media/podcasts:ro
       - ${RADIO_DIR}:/media/radio:ro
       - ${YOUTUBE_DIR}:/media/youtube:ro
