--- a/services/excalidraw/docker-compose.yml
+++ b/services/excalidraw/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   excalidraw:
-    image: excalidraw/excalidraw:latest
+    image: docker.io/excalidraw/excalidraw:latest
     container_name: excalidraw
     restart: unless-stopped
     ports:
