--- a/services/jellyfin/docker-compose.yml
+++ b/services/jellyfin/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   jellyfin:
-    image: jellyfin/jellyfin:latest
+    image: docker.io/jellyfin/jellyfin:latest
     container_name: jellyfin
     restart: unless-stopped
     ports:
