--- a/services/navidrome/docker-compose.yml
+++ b/services/navidrome/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   navidrome:
-    image: deluan/navidrome:latest
+    image: docker.io/deluan/navidrome:latest
     container_name: navidrome
     restart: unless-stopped
     ports:
