--- a/services/syncthing/docker-compose.yml
+++ b/services/syncthing/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   syncthing:
-    image: syncthing/syncthing
+    image: docker.io/syncthing/syncthing
     container_name: syncthing
     restart: unless-stopped
     network_mode: host
