--- a/services/uptime-kuma/docker-compose.yml
+++ b/services/uptime-kuma/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   uptime-kuma:
-    image: louislam/uptime-kuma:1.19.3-alpine
+    image: docker.io/louislam/uptime-kuma:1.19.3-alpine
     container_name: uptime-kuma
     restart: unless-stopped
     ports:
