Set long session TTL for stump

--- a/services/stump/docker-compose.yml
+++ b/services/stump/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       PUID: ${PUID}
       PGID: ${PGID}
       TZ: ${TZ}
+      SESSION_TTL: 31536000
     volumes:
       - ${CONFIG_DIR}/stump:/config
       - ${EBOOK_DIR}:/data
