Make services always restart, to help podman-restart work
See: https://github.com/containers/podman/issues/20418

--- a/services/archivebox/docker-compose.yml
+++ b/services/archivebox/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   archivebox:
     image: docker.io/archivebox/archivebox:latest
     container_name: archivebox
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_ARCHIVEBOX}:8000
     environment:
