--- a/services/ittools/docker-compose.yml
+++ b/services/ittools/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   it-tools:
     image: ghcr.io/corentinth/it-tools:latest
     container_name: it-tools
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_ITTOOLS}:80
     environment:
