--- a/services/thelounge/docker-compose.yml
+++ b/services/thelounge/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   thelounge:
     image: lscr.io/linuxserver/thelounge:latest
     container_name: thelounge
-    restart: unless-stopped
+    restart: always
     network_mode: "container:wireguard"
     environment:
       PUID: ${PUID}
