--- a/services/caddy/docker-compose.yml
+++ b/services/caddy/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   caddy:
     image: docker.io/library/caddy
     container_name: caddy
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_CADDY}:80
     environment:
