--- a/services/changedetection/docker-compose.yml
+++ b/services/changedetection/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   changedetection:
     image: ghcr.io/dgtlmoon/changedetection.io
     container_name: changedetection
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_CHANGEDETECTION}:5000
     environment:
