--- a/services/excalidraw/docker-compose.yml
+++ b/services/excalidraw/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   excalidraw:
     image: docker.io/excalidraw/excalidraw:latest
     container_name: excalidraw
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_EXCALIDRAW}:80
     environment:
