--- a/services/gandi-dynamic-dns/docker-compose.yml
+++ b/services/gandi-dynamic-dns/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   gandi-dynamic-dns:
     image: docker.io/adamvig/gandi-dynamic-dns:latest
     container_name: gandi-dynamic-dns
-    restart: unless-stopped
+    restart: always
     environment:
       PUID: ${PUID}
       PGID: ${PGID}
