--- a/services/kavita/docker-compose.yml
+++ b/services/kavita/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   kavita:
     image: lscr.io/linuxserver/kavita:latest
     container_name: kavita
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_KAVITA}:5000
     environment:
