--- a/services/mealie/docker-compose.yml
+++ b/services/mealie/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mealie:
     image: ghcr.io/mealie-recipes/mealie:v1.9.0
     container_name: mealie
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_MEALIE}:9000
     environment:
