--- a/services/metube/docker-compose.yml
+++ b/services/metube/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   metube:
     image: docker.io/alexta69/metube
     container_name: metube
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_METUBE}:8081
     environment:
