--- a/services/navidrome/docker-compose.yml
+++ b/services/navidrome/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   navidrome:
     image: docker.io/deluan/navidrome:latest
     container_name: navidrome
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_NAVIDROME}:4533
     environment:
