--- a/services/smokeping/docker-compose.yml
+++ b/services/smokeping/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   smokeping:
     image: lscr.io/linuxserver/smokeping:latest
     container_name: smokeping
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_SMOKEPING}:80
     environment:
