--- a/services/uptime-kuma/docker-compose.yml
+++ b/services/uptime-kuma/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   uptime-kuma:
     image: docker.io/louislam/uptime-kuma:1.19.3-alpine
     container_name: uptime-kuma
-    restart: unless-stopped
+    restart: always
     ports:
       - ${PORT_UPTIMEKUMA}:3001
     environment:
