--- a/services/wireguard/docker-compose.yml
+++ b/services/wireguard/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   wireguard:
     image: lscr.io/linuxserver/wireguard:latest
     container_name: wireguard
-    restart: unless-stopped
+    restart: always
     cap_add:
       - NET_ADMIN
     environment:
